# minimum-cmake-gtest

./: CMakeLists.txt  README.md  foo.cpp  foo.h  test_foo.cpp
